--- a/.github/workflows/deploy_via_storage_account.yml
+++ b/.github/workflows/deploy_via_storage_account.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Zip the app contents
         uses: papeloto/action-zip@v1
         with:
-          files: node-hello
+          files: /home/runner/work/node-hello/node-hello/node-hello/node-app
           dest: node-app.zip
 
       - name: Set SAS token expiration
