--- a/.github/workflows/deploy_via_storage_account.yml
+++ b/.github/workflows/deploy_via_storage_account.yml
@@ -51,11 +51,12 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: node-app
+          path: .
 
       - name: Zip the app contents
         uses: papeloto/action-zip@v1
         with:
-          files: node-app.zip
+          files: node-app
           dest: node-app.zip
 
       - name: Set SAS token expiration
