--- a/.github/workflows/deploy_via_storage_account.yml
+++ b/.github/workflows/deploy_via_storage_account.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Zip the app contents
         uses: papeloto/action-zip@v1
         with:
-          files: node-app
+          files: node-app.zip
           dest: node-app.zip
 
       - name: Set SAS token expiration
