Include delete storage account command

--- a/.github/workflows/deploy_linux_storage_account.yml
+++ b/.github/workflows/deploy_linux_storage_account.yml
@@ -78,3 +78,4 @@ jobs:
             az rest --method PUT --uri https://management.azure.com/subscriptions/${{ secrets.SUBSCRIPTIONID }}/resourceGroups/${GROUP}/providers/Microsoft.Web/sites/${WEB_APP}/extensions/onedeploy?api-version=2022-03-01 --body '{"properties": {"type": "zip", "packageUri": "'"${ZIP_URL}"'" }}'
 
             az storage container delete -n $STORAGE_CONTAINER --account-name $STORAGE_ACCOUNT
+            az storage account delete   -n $STORAGE_ACCOUNT   -g $GROUP --yes
