--- a/.github/workflows/deploy_linux_storage_account.yml
+++ b/.github/workflows/deploy_linux_storage_account.yml
@@ -1,9 +1,9 @@
 name: Deploy web app via Storage Account
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
   workflow_dispatch:
 
 env:
